<resources>
    <string name="app_name">TransportesRuta7App</string>

    <string name="title_activity_delete_account">DeleteAccountActivity</string>

    <string name="title_activity_register">RegisterActivity</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="MAPS_API_KEY">AIzaSyAl7DNVTlAIjrJYMVVM0FuFpLxs-WcLuFg</string>
    <string name="prefs_file">com.mana.transportesruta7app.PREFERENCE_FILE_KEY</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="inisesion">Inicio Sesión</string>
    <string name="btnlogin">Entrar</string>
    <string name="admin">Admin</string>
    <string name="AdminMode">Administración</string>
    <string name="cerrarSession">Cerrar Session</string>
    <string name="registrar">Registrar Usuario</string>
    <string name="desactivarUsuario">Desactivar / Activar Usuario</string>
    <string name="eliminar">Eliminar Usuario</string>
    <string name="modificar">Modificar Usuario</string>
    <string name="ver_vales">Ver Vales</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="link_signup">Sign up</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@mail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="register_passenger">Registrar Pasajero</string>
    <string name="description_register_passenger">Se debe ingresar: nombre, rut y la firma dibujada en el celular</string>
    <string name="passenger_name">Nombre pasajero</string>
    <string name="dni_passenger">Rut pasajero</string>
    <string name="cellpone">Nro telefono</string>
    <string name="signature">Firma</string>
    <string name="newticket">Nuevo Vale</string>


    <string-array name="items">
        <item>Seleccione</item>
        <item>Chofer</item>
        <item>Admin</item>
    </string-array>
    <string name="title_activity_actualizar_datos">ActualizarDatosActivity</string>

</resources>
