<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".PasajeroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginRight="24dp"
            android:text="@string/register_passenger" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/description_register_passenger" />

        <EditText
            android:id="@+id/passenger_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:autofillHints="@string/passenger_name"
            android:background="@drawable/ic_field"
            android:textColorHint="@color/gray"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/passenger_name"
            android:inputType="textPersonName"
            android:maxLength="16"
            android:padding="16dp" />

        <EditText
            android:id="@+id/rutEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:autofillHints="@string/dni_passenger"
            android:background="@drawable/ic_field"
            android:textColorHint="@color/gray"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/dni_passenger"
            android:inputType="text"
            android:maxLength="16"
            android:padding="16dp" />




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/firmar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_field"
            android:backgroundTint="@color/orange"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/signature"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>